# pits-n-giggles

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .lfsconfig  .pylintrc  .sourcery.yaml  BUILDING.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  F126_MIGRATION_PLAN.md  LICENSE  PLAN-issue-272.md  README.md  _test_connectivity.txt  app.py  docker-compose.yml  f1-23-lobby-monitor.py  f1_packet_info.py  f1_types.py  integration_test_cfg.ini  integration_test_cfg.json  openf1-playground.py  overtake_analyzer.py  packet_cap.py  plan-standalone-mfd-pages.md  png.spec  png_config.json  pyproject.toml  race_analyzer.py  race_data_analyzer.py  requirements.txt  run-post-race-tool.bat  run.bat  run.sh  server.py  socket_receiver.py  (+13 more)
.claude/commands/: add-config-field.md  add-mcp-tool.md  add-packet-type.md  new-overlay.md  perf-report.md  release-notes.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md
.github/workflows/: bug-response.yml  close-stale-prs.yml  common-build.yml  discord-release.yml  mac-build.yml  pylint.yml  qmllint.yml  release.yml  unit-tests.yml
apps/: launcher_gui.py
apps/backend/: README.md  __main__.py  app.py  overtakes.py  pits_n_giggles.py  session_pipeline.py  telemetry_data.py  telemetry_handler.py  telemetry_server.py  telemetry_web_api.py
apps/backend/rust/crates/backend/: Cargo.toml
apps/backend/rust/crates/backend/src/: config.rs  control.rs  derived.rs  external.rs  forwarder.rs  frontend_updates.rs  ipc.rs  lib.rs  main.rs  manual_save.rs  runtime.rs  shutdown.rs  web.rs
apps/backend/rust/crates/backend/tests/: backend_app.rs  backend_bin.rs  backend_runtime.rs  ipc_server.rs  web_server.rs
apps/backend/rust/crates/telemetry-core/: Cargo.toml
apps/backend/rust/crates/telemetry-core/src/: frame_gate.rs  lib.rs  manager.rs  receiver.rs  watchdog.rs
apps/backend/rust/crates/telemetry-core/tests/: frame_gate.rs  manager.rs  receiver.rs  watchdog.rs
apps/broker/: __main__.py  ipc.py  png_broker.py
assets/: logo.icns
claude_hud/: app.js  index.html  main.py  style.css
docs/: BUILDING.md  RUNNING.md  TESTING.md  arch.mmd  db-schema.mmd  hud-arch.mmd
examples/: base.py  e1.py  e2_overlay.py
lib/: README.md  child_proc_mgmt.py  collisions_analyzer.py  custom_marker_tracker.py  error_codes.py  error_status.py  event_counter.py  file_path.py  fuel_rate_recommender.py  history_tracker.py  inter_task_communicator.py  inter_thread_communicator.py  logger.py  mailbox.py  overtake_analyzer.py  packet_cap.py  packet_forwarder.py  pending_events.py  periodic_task.py  pid_report.py  port_check.py  race_analyzer.py  rate_limiter.py  rolling_history.py  save_to_disk.py  socket_receiver.py  telemetry_manager.py  track_map_generator.py  tyre_wear_extrapolator.py  version.py  wdt.py
meta/: meta.py
screenshots/: arch.mmd
scripts/: .coveragerc_integration  .coveragerc_ut  .pylintrc  build.py  coverage_base.py  coverage_interation_tests.py  coverage_ut.py  perf_extract.py  png.spec  qmllint.py  run-post-race-tool.bat  run-post-race-tool.sh  run.bat  run.sh  version.py
session_captures/: f1_23_sp_austria.f1pcap  f1_23_tt_silverstone.f1pcap  f1_24_sp_austria.f1pcap  f1_24_sp_austria_flashback.f1pcap  f1_24_tt_silverstone.f1pcap
src/: config.py  overtakes.py  png_logger.py  telemetry_data.py  telemetry_handler.py  telemetry_manager.py  telemetry_server.py  telemetry_web_api.py
templates/: index.html
tests/: README.md  conftest.py  endpoints_test.py  tests_base.py  tests_child_proc_mgmt.py  tests_collision_analyzer.py  tests_config.py  tests_custom_markers.py  tests_debouncer.py  tests_event_counter.py  tests_frame_gate.py  tests_fuel_recommender.py  tests_history_tracker.py  tests_ipc.py  tests_itc.py  tests_mailbox.py  tests_multi_session_runtime.py  tests_overtake_analyzer.py  tests_pcap.py  tests_pending_events.py  tests_pid_report.py  tests_port_check.py  tests_power_estimator.py  tests_race_analyzer.py  tests_race_ctrl.py  tests_rate_limiter.py  tests_rolling_history.py  tests_save_to_disk.py  tests_save_viewer_ipc.py  tests_save_viewer_web_server.py  tests_track_segment_info.py  tests_tyre_wear_extrapolator.py  tests_udp_forwarder.py  tests_version.py  tests_wdt.py  tests_web_server.py  unit_tests.py
utils/: key_cleanup.py  participants_printer.py  telemetry_post_race_data_viewer.py  telemetry_recorder.py  telemetry_replayer.py
(+837 files in other folders)
