[package]
name = "backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "backend"
path = "src/lib.rs"

[dependencies]
async-stream = "0.3"
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
f1-types = { path = "../f1-types" }
futures-core = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
state = { path = "../state" }
telemetry-core = { path = "../telemetry-core" }
tokio = { version = "1.50", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["fs"] }
zmq = "0.10"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tokio = { version = "1.50", features = ["macros", "net", "rt-multi-thread", "time"] }
tower = "0.5"
